--- a/src/main/webapp/les9.html
+++ b/src/main/webapp/les9.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="css/les8p1.css">
+<link rel="stylesheet" type="text/css" href="css/les9.css">
 <title>Les 9 Practicum 1,2 en 3</title>
 <body>
 	<div id="frame">
